# uroboro

./: .gitignore  LICENSE  Paths_uroboro.hs  README.md  grammar.html  grammar.txt  judgments.tex  uroboro.cabal
executables/: uroboro.hs
samples/: cycle.uro  fib.uro  letrec.uro  list.uro  prelude.uro
src/: Main.hs  Paths_uroboro.hs
src/Uroboro/: Abstract.hs  Checker.hs  Error.hs  Exception.hs  Interpreter.hs  Language.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  Token.hs  Tree.hs
src/Uroboro/Tree/: Common.hs  External.hs  Internal.hs
test/: MainSpec.hs  TestMain.hs  Utils.hs
test/Uroboro/: CheckerSpec.hs  InterpreterSpec.hs  ParserSpec.hs  TokenSpec.hs
