-- See http://haskell.org/cabal/users-guide/

name:                uroboro

-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            An Implementation of a Language with Pattern and Copattern Matching
license:             MIT
license-file:        LICENSE
author:              Tobias Weber
-- maintainer:
-- description:
copyright:           (c) 2014 Tobias Weber
category:            Language
build-type:          Simple
extra-source-files:  README.md
data-files:          samples/prelude.uro
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/tewe/uroboro.git

flag coverage
  description:         Enable test coverage checking.
  default:             False
  manual:              True

flag warnings
  description:         Enable all warnings.
  default:             False
  manual:              True

library
  exposed-modules:
    Uroboro.Checker
    Uroboro.Error
    Uroboro.Interpreter
    Uroboro.Parser
    Uroboro.PrettyPrint
    Uroboro.Token
    Uroboro.Tree
  other-modules:       Paths_uroboro
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8, parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(coverage)
    ghc-options:
      -fhpc
  if flag(warnings)
    ghc-options:
      -Wall

test-suite tests
  type:
      exitcode-stdio-1.0
  if flag(coverage)
    ghc-options:
      -fhpc
  if flag(warnings)
    ghc-options:
      -Wall
  other-modules:       Paths_uroboro
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , uroboro
    , parsec
    , hspec >=1.11 && <1.12
  default-language:    Haskell2010

executable uroboro
  main-is:             uroboro.hs
  build-depends:       base >=4.7 && <4.8, parsec >=3.1 && <3.2, uroboro
  hs-source-dirs:      executables
  default-language:    Haskell2010
